I updated the team static page with information about myself. I updated the hero image on the splash page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,9 @@
           <div class="col-12 col-sm-3">
             <b>Contact</b>
             <br />
-            jojosmith27@gmail.com
+            <a href="mailto:jojosmith27@gmail.com">
+              jojosmith27@gmail.com
+            </a>
             <br />
             Mesa AZ, 85206
           </div>
