--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -3,7 +3,40 @@
 <div class="booyah-box col-10 offset-1">
   <h1>Team</h1>
 
+  <br />
   <p>
-    One man team.
+    Flixter was built by <a target="_blank" href="https://github.com/jasmit43">Joseph Smith</a>. He is a new up and coming web developer who is dedicated to learning how to turn his ideas into reality.
   </p>
+  
+  <p>
+    With guided instruction, Joseph has built this web application to demonstrate his ability and skill as a junior web developer.
+  </p>
+
+  <br />
+  <div class="row">
+    <div class="col-12 col-sm-4">
+      <%= image_tag 'me.jpg', class: 'img-fluid' %>
+    </div>
+
+    <div class="col-12 col-sm-7 offset-sm-1">
+      <h2 class="text-center">Joseph Smith</h2>
+      
+      <br />
+      
+      <p>
+        Joseph got his full-stack web developer certificate from the University of Arizona Online Coding Bootcamp, where he learned how to create web applications just like this one.
+      </p>
+
+    </div>
+
+  </div>
+  <br/>
+  <br/>
+  <br/>
+
+
 </div>
+
+  <br class="clear" />
+  <br/>
+
