--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link href="http://vjs.zencdn.net/5.12.6/video-js.css" rel="stylesheet">
+    <link href="https://vjs.zencdn.net/5.12.6/video-js.css" rel="stylesheet">
 
   </head>
 
@@ -103,8 +103,8 @@
       </div>
     </div>
 
-    <script src="http://vjs.zencdn.net/5.12.6/video.js"></script>
-    <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+    <script src="https://vjs.zencdn.net/5.12.6/video.js"></script>
+    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
     
   </body>
 </html>
