--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,9 +2,9 @@
   <br />
   <div class="frosty col-10 offset-1 text-center">
     <br />
-    <h1>Learn Magic from the Pros</h1>
+    <h1>Expand your knowledge</h1>
     <br />
-    <h2>I'm an illusionist, Joseph.</h2>
+    <h2>Learn a new skill today!</h2>
     <br />
     <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
